--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@mui/material": "^7.3.6",
     "@mui/styled-engine": "^7.3.6",
     "@tailwindcss/vite": "^4.1.18",
+    "dotenv": "^17.2.3",
+    "gapi-script": "^1.2.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-mui-sidebar": "^1.6.10",
