--- a/server/package.json
+++ b/server/package.json
@@ -10,8 +10,12 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
-    "googleapis": "^169.0.0"
+    "express-session": "^1.18.2",
+    "googleapis": "^169.0.0",
+    "mongoose": "^9.1.2"
   }
 }
